# Nebula-Dreamcast-Engine

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  nebula.rc
Scripts/: NavMesh_AI_Roam.c  ScriptTemplate.c  WASD_Node3D_Nav.c
assets/: WASD_Node3D_Nav.c.backup  camera3d_helper.fbx  camera3d_helper.nebmesh  cube_primitive.fbx  cube_primitive.nebmesh
docs/: Asset_Pipeline.md  Dreamcast_Binding_API.md  Dreamcast_Export.md  Dreamcast_Header_Reference.md  Learning_Path.md  Multi_Script_Runtime.md  README.md  Script_Formatting_Syntax_Semantics.md  Source_Directory_Structure.md  VMU_Tool.md  Viewport_and_Rendering.md
docs/assets/: Animation_System.md  File_Formats.md  Mesh_and_Materials.md
docs/dreamcast/: Dreamcast_Binding_API.md  Dreamcast_Export.md
docs/editor/: Editor_Play_Mode.md  Editor_UI.md  VMU_Tool.md  Viewport_and_Rendering.md
docs/gameplay/: Multi_Script_Runtime.md  Navigation.md  Physics_and_Collision.md
docs/getting-started/: Dreamcast_Binding_API_v2.md  Editor_Core.md  Nebula_Dependencies_and_Paths.md  Quickstart_Tutorial.md  Scripting.md
docs/reference/: Math_Reference.md
docs/scene-and-nodes/: Camera_System.md  Node_Types.md  Scene_System.md
src/: audio3d.cpp  audio3d.h  main.cpp  nebula_dreamcast.cpp  nebula_dreamcast.h
src/assets/: meta_io.cpp  meta_io.h
src/camera/: Camera3D.cpp  Camera3D.h  camera3d.h
src/core/: anim_io.cpp  anim_io.h  camera3d.h  math_utils.cpp  math_utils.h  mesh_io.h  texture_io.cpp  texture_io.h
src/editor/: camera3d_v2.cpp  camera3d_v2.h  editor_state.cpp  editor_state.h  file_dialogs.cpp  file_dialogs.h  frame_loop.cpp  frame_loop.h  hotkeys.cpp  hotkeys.h  main.cpp  prefs.cpp  prefs.h  project.cpp  project.h  undo.cpp  undo.h  viewport_nav.cpp  viewport_nav.h
src/io/: anim_io.cpp  anim_io.h  mesh_io.cpp  mesh_io.h  meta_io.cpp  meta_io.h
src/math/: math_types.h  math_utils.cpp  math_utils.h
src/navmesh/: NavMeshBuilder.cpp  NavMeshBuilder.h
src/nodes/: Audio3D.cpp  Camera3DNode.h  NavMesh3D.cpp  NavMesh3D.h  NavMesh3DNode.cpp  Node3D.cpp  Node3D.h  NodeTypes.h  StaticMesh3D.cpp  StaticMesh3DNode.cpp  StaticMesh3DNode.h  camera3d.cpp  camera3d.h
src/platform/dreamcast/: DetourBridge.cpp  DetourBridge.h  KosBindings.c  KosBindings.h  KosInput.c  KosInput.h  build_helpers.cpp  build_helpers.h  dc_codegen.cpp  dc_codegen.h
src/runtime/: collision.cpp  collision.h  fallback_controller.cpp  fallback_controller.h  physics.cpp  physics.h  runtime_bridge.cpp  runtime_bridge.h  script_compile.cpp  script_compile.h
src/scene/: Audio3DNode.cpp  Node3D.cpp  NodeTypes.h  SceneIO.cpp  SceneIO.h  StaticMeshNode.cpp  scene_io.cpp  scene_io.h  scene_manager.cpp  scene_manager.h
src/ui/: asset_browser.cpp  asset_browser.h  assets_panel.cpp  assets_panel.h  import_pipeline.cpp  import_pipeline.h  inspector.cpp  inspector.h  main_menu.cpp  main_menu.h  mesh_inspector.cpp  mesh_inspector.h  scene_outliner.cpp  scene_outliner.h  scene_tabs.cpp  scene_tabs.h  toolbar.cpp  toolbar.h
src/viewport/: background.cpp  background.h  node_gizmos.cpp  node_gizmos.h  node_helpers.cpp  node_helpers.h  picking.cpp  picking.h  static_mesh_render.cpp  static_mesh_render.h  viewport_render.cpp  viewport_render.h  viewport_selection.cpp  viewport_selection.h  viewport_transform.cpp  viewport_transform.h
src/vmu/: vmu_tool.cpp  vmu_tool.h  vmu_tool_ui.cpp  vmu_tool_ui.h
